# icl

./: Cargo.toml  rustfmt.toml
icl_cringe/: Cargo.toml
icl_cringe/src/: main.rs
icl_frontend/: Cargo.toml
icl_frontend/src/: ast.rs  lex.rs  lib.rs  parser.rs
icl_frontend/src/ast/: atom.rs  block.rs  doc.rs  expr.rs  stmt.rs  ty.rs
icl_frontend/src/ast_lints/: formatting.rs  macros.rs
icl_frontend/src/lex/: span.rs  token.rs
icl_frontend/src/parser/: atom.rs  call_args.rs  doc.rs  expr.rs  stmt.rs
quark_frontend/: Cargo.toml
quark_frontend/src/: ast_lints.rs  lib.rs
quark_frontend/src/ast/: atom.rs  doc.rs  expr.rs  ops.rs  single.rs  ty.rs
quark_frontend/src/lex/: error.rs  span.rs  test.rs  token.rs
quark_frontend/src/lex/tests/: test_lexer.txt
quark_frontend/src/parser/: atom.rs  block.rs  expr.rs  ops.rs  ty.rs
