[workspace]
members = [ "icl_cringe", "quark_frontend", "quark_hir"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
deprecated_in_future = "warn"

[workspace.lints.clippy]
# Deny unexpected overflows
arithmetic_side_effects = "warn"
as_conversions = "warn"

# Warn on `ref_counter.clone()`
clone_on_ref_ptr = "warn"

# Deny .unwrap() calls
unwrap_used = "deny"

